remove mailto with missing email address (fails html proofer, plus who clicks on mailtos)

--- a/themes/crisp_kyle/layouts/partials/share.html
+++ b/themes/crisp_kyle/layouts/partials/share.html
@@ -1,7 +1,7 @@
 <div id="social-bar">
   <ul class="rrssb-buttons clearfix">
       <!--<li class="share"><span class="icon"><i class="fa fa-share"></i></span></li>-->
-      <li class="email">
+      <!--<li class="email">
           <a href="mailto:?subject={{ .Title }}&amp;body={{ .Permalink | safeURL }}">
               <span class="icon">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
@@ -10,7 +10,7 @@
               </span>
               <span class="text">Email</span>
           </a>
-      </li>
+      </li>-->
       <li class="facebook">
           <a href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink | safeURL }}" class="popup">
               <span class="icon">
