--- a/themes/crisp_kyle/layouts/index.html
+++ b/themes/crisp_kyle/layouts/index.html
@@ -743,7 +743,7 @@
         <div id="main">
             <div class="inner">
                 <div id="image01" class="image full">
-                        <img src="img/filco/001.jpg" alt="" />
+                        <img src="img/header.jpg" alt="header" />
                 </div>
                 <h1 id="text01">Kyle Boyle</h1>
                 <p id="text02">Technology Consultant</p>
@@ -766,7 +766,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="n03" href="https://www.linkedin.com/in/kyboyle/">
+                        <a class="n03" href="https://www.linkedin.com/in/kyboyle">
                             <svg>
                                 <use xlink:href="#icon-910"></use>
                             </svg>
