disable anchor link check for linkedin

--- a/themes/crisp_kyle/layouts/index.html
+++ b/themes/crisp_kyle/layouts/index.html
@@ -766,7 +766,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="n03" href="https://www.linkedin.com/in/kyboyle">
+                        <a class="n03" href="https://www.linkedin.com/in/kyboyle" data-proofer-ignore>
                             <svg>
                                 <use xlink:href="#icon-910"></use>
                             </svg>
