remove articles for now

--- a/themes/crisp_kyle/layouts/index.html
+++ b/themes/crisp_kyle/layouts/index.html
@@ -782,7 +782,7 @@
                         </a>
                     </li>
                 </ul>
-                <hr id="divider01">
+                <!--<hr id="divider01">
                 {{ $paginator := .Paginator }}
 
     {{ range $index, $page := .Paginator.Pages }}
@@ -790,7 +790,7 @@
     {{ end }}
 
         {{ partial "pagination.html" $paginator }}
-        
+                -->
             </div>
         </div>
     </div>
